@@ -16,54 +16,6 @@ quartz.dbprovider.SqlServer-20.useParameterNamePrefixInParameterCollection=true
 quartz.dbprovider.SqlServer-20.bindByName=true
 quartz.dbprovider.SqlServer-20.dbBinaryTypeName=Image
 
-# SQL Server CE
-
-quartz.dbprovider.SqlServerCe-351.productName=Microsoft SQL Server Compact Edition, provider V3.5.1.0 in framework .NET V2.0
-quartz.dbprovider.SqlServerCe-351.assemblyName=System.Data.SqlServerCe, Version=3.5.1.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91
-quartz.dbprovider.SqlServerCe-351.connectionType=System.Data.SqlServerCe.SqlCeConnection, System.Data.SqlServerCe, Version=3.5.1.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91
-quartz.dbprovider.SqlServerCe-351.commandType=System.Data.SqlServerCe.SqlCeCommand, System.Data.SqlServerCe, Version=3.5.1.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91
-quartz.dbprovider.SqlServerCe-351.parameterType=System.Data.SqlServerCe.SqlCeParameter, System.Data.SqlServerCe, Version=3.5.1.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91
-quartz.dbprovider.SqlServerCe-351.commandBuilderType=System.Data.SqlServerCe.SqlCeCommandBuilder, System.Data.SqlServerCe, Version=3.5.1.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91
-quartz.dbprovider.SqlServerCe-351.parameterDbType=System.Data.SqlDbType, System.Data, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089
-quartz.dbprovider.SqlServerCe-351.parameterDbTypePropertyName=SqlDbType
-quartz.dbprovider.SqlServerCe-351.parameterNamePrefix=@
-quartz.dbprovider.SqlServerCe-351.exceptionType=System.Data.SqlServerCe.SqlCeException, System.Data.SqlServerCe, Version=3.5.1.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91
-quartz.dbprovider.SqlServerCe-351.useParameterNamePrefixInParameterCollection=true
-quartz.dbprovider.SqlServerCe-351.bindByName=true
-quartz.dbprovider.SqlServerCe-351.dbBinaryTypeName=Image
-
-# SQL Server CE 3.5 SP2 
-
-quartz.dbprovider.SqlServerCe-352.productName=Microsoft SQL Server Compact Edition, provider V3.5.1.50 in framework .NET V2.0 
-quartz.dbprovider.SqlServerCe-352.assemblyName=System.Data.SqlServerCe, Version=3.5.1.50, Culture=neutral, PublicKeyToken=89845dcd8080cc91 
-quartz.dbprovider.SqlServerCe-352.connectionType=System.Data.SqlServerCe.SqlCeConnection, System.Data.SqlServerCe, Version=3.5.1.50, Culture=neutral, PublicKeyToken=89845dcd8080cc91 
-quartz.dbprovider.SqlServerCe-352.commandType=System.Data.SqlServerCe.SqlCeCommand, System.Data.SqlServerCe, Version=3.5.1.50, Culture=neutral, PublicKeyToken=89845dcd8080cc91 
-quartz.dbprovider.SqlServerCe-352.parameterType=System.Data.SqlServerCe.SqlCeParameter, System.Data.SqlServerCe, Version=3.5.1.50, Culture=neutral, PublicKeyToken=89845dcd8080cc91 
-quartz.dbprovider.SqlServerCe-352.commandBuilderType=System.Data.SqlServerCe.SqlCeCommandBuilder, System.Data.SqlServerCe, Version=3.5.1.50, Culture=neutral, PublicKeyToken=89845dcd8080cc91 
-quartz.dbprovider.SqlServerCe-352.parameterDbType=System.Data.SqlDbType, System.Data, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089 
-quartz.dbprovider.SqlServerCe-352.parameterDbTypePropertyName=SqlDbType 
-quartz.dbprovider.SqlServerCe-352.parameterNamePrefix=@ 
-quartz.dbprovider.SqlServerCe-352.exceptionType=System.Data.SqlServerCe.SqlCeException, System.Data.SqlServerCe, Version=3.5.1.50, Culture=neutral, PublicKeyToken=89845dcd8080cc91 
-quartz.dbprovider.SqlServerCe-352.useParameterNamePrefixInParameterCollection=true 
-quartz.dbprovider.SqlServerCe-352.bindByName=true 
-quartz.dbprovider.SqlServerCe-352.dbBinaryTypeName=Image
-
-# SQL Server CE 4.0
-
-quartz.dbprovider.SqlServerCe-400.productName=Microsoft SQL Server Compact Edition, provider V4.0.0.0 in framework .NET V4.0 
-quartz.dbprovider.SqlServerCe-400.assemblyName=System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91
-quartz.dbprovider.SqlServerCe-400.connectionType=System.Data.SqlServerCe.SqlCeConnection, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91 
-quartz.dbprovider.SqlServerCe-400.commandType=System.Data.SqlServerCe.SqlCeCommand, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91 
-quartz.dbprovider.SqlServerCe-400.parameterType=System.Data.SqlServerCe.SqlCeParameter, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91 
-quartz.dbprovider.SqlServerCe-400.commandBuilderType=System.Data.SqlServerCe.SqlCeCommandBuilder, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91 
-quartz.dbprovider.SqlServerCe-400.parameterDbType=System.Data.SqlDbType, System.Data, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089 
-quartz.dbprovider.SqlServerCe-400.parameterDbTypePropertyName=SqlDbType 
-quartz.dbprovider.SqlServerCe-400.parameterNamePrefix=@ 
-quartz.dbprovider.SqlServerCe-400.exceptionType=System.Data.SqlServerCe.SqlCeException, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91 
-quartz.dbprovider.SqlServerCe-400.useParameterNamePrefixInParameterCollection=true 
-quartz.dbprovider.SqlServerCe-400.bindByName=true 
-quartz.dbprovider.SqlServerCe-400.dbBinaryTypeName=Image
-
 # ORACLE 
 
 # for backward compatibility
